<resources>
    <string name="app_name">Sketchware Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="besome_blog_url">http://medium.com/sketchware</string>
    <string name="block_add_list_int_body_1">to</string>
    <string name="block_add_list_int_head">add</string>
    <string name="block_add_list_int_tail" />
    <string name="block_add_list_map_body_1">value</string>
    <string name="block_add_list_map_body_2">to</string>
    <string name="block_add_list_map_head">add key</string>
    <string name="block_add_list_map_tail" />
    <string name="block_add_list_str_body_1">to</string>
    <string name="block_add_list_str_head">add</string>
    <string name="block_add_list_str_tail" />
    <string name="block_add_map_to_list_body_1">to</string>
    <string name="block_add_map_to_list_head">add</string>
    <string name="block_add_map_to_list_tail" />
    <string name="block_add_source_directly_head">add source directly</string>
    <string name="block_add_source_directly_tail" />
    <string name="block_adview_load_ad_head" />
    <string name="block_adview_load_ad_tail">load</string>
    <string name="block_and_body_1">and</string>
    <string name="block_and_head" />
    <string name="block_and_tail" />
    <string name="block_move_to_bin">Move to recycle bin</string>
    <string name="block_bigger_body_1">></string>
    <string name="block_bigger_head" />
    <string name="block_bigger_tail" />
    <string name="block_bluetoothconnect_activate_bluetooth_head" />
    <string name="block_bluetoothconnect_activate_bluetooth_tail">activate bluetooth</string>
    <string name="block_bluetoothconnect_get_paired_devices_body_1">get paired devices to</string>
    <string name="block_bluetoothconnect_get_paired_devices_head" />
    <string name="block_bluetoothconnect_get_paired_devices_tail" />
    <string name="block_bluetoothconnect_get_random_uuid_head" />
    <string name="block_bluetoothconnect_get_random_uuid_tail">get random uuid</string>
    <string name="block_bluetoothconnect_is_bluetooth_activated_head" />
    <string name="block_bluetoothconnect_is_bluetooth_activated_tail">is bluetooth activated</string>
    <string name="block_bluetoothconnect_is_bluetooth_enabled_head" />
    <string name="block_bluetoothconnect_is_bluetooth_enabled_tail">is bluetooth enabled</string>
    <string name="block_bluetoothconnect_ready_connection_body_1">ready connection with tag</string>
    <string name="block_bluetoothconnect_ready_connection_head" />
    <string name="block_bluetoothconnect_ready_connection_tail" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_1">ready connection to uuid</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_2">with tag</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_send_data_body_1">send data</string>
    <string name="block_bluetoothconnect_send_data_body_2">with tag</string>
    <string name="block_bluetoothconnect_send_data_head" />
    <string name="block_bluetoothconnect_send_data_tail" />
    <string name="block_bluetoothconnect_start_connection_body_1">start connection to address</string>
    <string name="block_bluetoothconnect_start_connection_body_2">with tag</string>
    <string name="block_bluetoothconnect_start_connection_head" />
    <string name="block_bluetoothconnect_start_connection_tail" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_1">start connection to uuid</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_2">and address</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_3">with tag</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_stop_connection_body_1">stop connection with tag</string>
    <string name="block_bluetoothconnect_stop_connection_head" />
    <string name="block_bluetoothconnect_stop_connection_tail" />
    <string name="block_break_head">stop</string>
    <string name="block_break_tail" />
    <string name="block_calendar_add_body_1">add</string>
    <string name="block_calendar_add_body_2">value</string>
    <string name="block_calendar_add_head" />
    <string name="block_calendar_add_tail" />
    <string name="block_calendar_diff_body_1">-</string>
    <string name="block_calendar_diff_head">Difference</string>
    <string name="block_calendar_diff_tail" />
    <string name="block_calendar_format_body_1">Format</string>
    <string name="block_calendar_format_head" />
    <string name="block_calendar_format_tail" />
    <string name="block_calendar_get_now_head" />
    <string name="block_calendar_get_now_tail">getNow</string>
    <string name="block_calendar_get_time_head" />
    <string name="block_calendar_get_time_tail">getTime(ms)</string>
    <string name="block_calendar_set_body_1">set</string>
    <string name="block_calendar_set_body_2">value</string>
    <string name="block_calendar_set_head" />
    <string name="block_calendar_set_tail" />
    <string name="block_calendar_set_time_body_1">setTime</string>
    <string name="block_calendar_set_time_head" />
    <string name="block_calendar_set_time_tail">ms</string>
    <string name="block_calendarview_get_date_head" />
    <string name="block_calendarview_get_date_tail">getDate(ms)</string>
    <string name="block_calendarview_set_date_body_1">setDate</string>
    <string name="block_calendarview_set_date_head" />
    <string name="block_calendarview_set_date_tail">ms</string>
    <string name="block_calendarview_set_max_date_body_1">setMaxDate</string>
    <string name="block_calendarview_set_max_date_head" />
    <string name="block_calendarview_set_max_date_tail">ms</string>
    <string name="block_calendarview_set_min_date_body_1">setMinDate</string>
    <string name="block_calendarview_set_min_date_head" />
    <string name="block_calendarview_set_min_date_tail">ms</string>
    <string name="block_camera_start_take_picture_head" />
    <string name="block_camera_start_take_picture_tail">take picture</string>
    <string name="block_category_component_func">Component</string>
    <string name="block_category_control">Control</string>
    <string name="block_category_file">File</string>
    <string name="block_category_list">List</string>
    <string name="block_category_math">Math</string>
    <string name="block_category_moreblock">More Block</string>
    <string name="block_category_operator">Operator</string>
    <string name="block_category_var">Variable</string>
    <string name="block_category_view_func">View</string>
    <string name="block_clear_list_head">clear</string>
    <string name="block_clear_list_tail" />
    <string name="block_close_drawer_head">closeDrawer</string>
    <string name="block_close_drawer_tail" />
    <string name="block_contain_list_int_body_1">contains</string>
    <string name="block_contain_list_int_head" />
    <string name="block_contain_list_int_tail" />
    <string name="block_contain_list_map_body_1">contains at</string>
    <string name="block_contain_list_map_body_2">key</string>
    <string name="block_contain_list_map_head" />
    <string name="block_contain_list_map_tail" />
    <string name="block_contain_list_str_body_1">contains</string>
    <string name="block_contain_list_str_head" />
    <string name="block_contain_list_str_tail" />
    <string name="block_copy_to_clipboard_head">copyToClipboard</string>
    <string name="block_copy_to_clipboard_tail" />
    <string name="block_crop_bitmap_center_body_1">to path</string>
    <string name="common_word_activity">Activity</string>
    <string name="common_word_add">Add</string>
    <string name="common_word_block">Block</string>
    <string name="common_word_component">Component</string>
    <string name="common_word_drawer">Drawer</string>
    <string name="common_word_edit">Edit</string>
    <string name="common_word_font">Font</string>
    <string name="common_word_image">Image</string>
    <string name="common_word_moreblock">Moreblock</string>
    <string name="common_word_remove">Remove</string>
    <string name="common_word_sound">Sound</string>
    <string name="common_word_view">View</string>
    <string name="common_word_widget">Widget</string>
    <string name="design_actionbar_title_manager_image">Image Manager</string>
    <string name="design_actionbar_title_manager_sound">Sound Manager</string>
    <string name="design_actionbar_title_manager_view">View Manager</string>
    <string name="design_actionbar_title_show_source_code">Show built-in source code</string>
    <string name="logic_editor_hint_enter_variable_name">Enter variable name (Case-sensitive)</string>
    <string name="logic_variable_type_boolean">Boolean</string>
    <string name="logic_variable_type_map">Map</string>
    <string name="logic_variable_type_number">Number</string>
    <string name="logic_variable_type_string">String</string>
    <string name="about_title">About Sketchware Pro</string>
    <string name="about_team_title">The team</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_beta_changes_title">Beta Changes</string>
    <string name="about_joindiscord">Join our Discord server</string>
    <string name="hardcoded_activated">Activated</string>
    <string name="hardcoded_activating_stringfog_will_encrypt_the_strings_in_compilation">Activating StringFog will encrypt the strings in compilation time, which will make your app more difficult to reverse-engineer.</string>
    <string name="hardcoded_activity">Activity</string>
    <string name="hardcoded_ascending_az">Ascending (A-Z)</string>
    <string name="hardcoded_auto_scroll">Auto scroll</string>
    <string name="hardcoded_baseline">Baseline</string>
    <string name="hardcoded_blocks_collection">Blocks collection</string>
    <string name="hardcoded_class">Class</string>
    <string name="hardcoded_clear_all_logs">Clear all logs</string>
    <string name="hardcoded_descending_za">Descending (Z-A)</string>
    <string name="hardcoded_enter_a_name">Enter a name</string>
    <string name="hardcoded_export_logcat">Export Logcat</string>
    <string name="hardcoded_ffffff">#FFFFFF</string>
    <string name="hardcoded_file">File</string>
    <string name="hardcoded_filter_by_package_name">Filter by package name</string>
    <string name="hardcoded_folder">Folder</string>
    <string name="hardcoded_java_activity">Java Activity</string>
    <string name="hardcoded_java_class">Java Class</string>
    <string name="hardcoded_kotlin_activity">Kotlin Activity</string>
    <string name="hardcoded_kotlin_class">Kotlin Class</string>
    <string name="hardcoded_merge_and_replace">Merge and Replace</string>
    <string name="hardcoded_merge_and_skip">Merge and Skip</string>
    <string name="hardcoded_outlined">Outlined</string>
    <string name="hardcoded_redo">Redo</string>
    <string name="hardcoded_replace_all">Replace all</string>
    <string name="hardcoded_round">Round</string>
    <string name="hardcoded_select_import_option">Select Import option</string>
    <string name="hardcoded_selected_color">Selected color</string>
    <string name="hardcoded_sharp">Sharp</string>
    <string name="hardcoded_show_source_code">Show Source Code</string>
    <string name="hardcoded_sort_by_id">Sort by ID</string>
    <string name="hardcoded_sort_by_project_name">Sort by Project Name</string>
    <string name="hardcoded_stringfog_manager">StringFog Manager</string>
    <string name="hardcoded_style">Style</string>
    <string name="hardcoded_two_tone">Two Tone</string>
    <string name="hardcoded_undo">Undo</string>
</resources>