<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/activity"
        android:title="@string/common_word_activity"
        android:icon="@drawable/ic_lifecycle" />
    <item
        android:id="@+id/view"
        android:title="@string/common_word_view"
        android:icon="@drawable/ic_view" />
    <item
        android:id="@+id/component"
        android:title="@string/common_word_component"
        android:icon="@drawable/ic_component" />
    <item
        android:id="@+id/drawer"
        android:title="@string/common_word_drawer"
        android:icon="@drawable/ic_drawer" />
    <item
        android:id="@+id/moreblock"
        android:title="@string/common_word_moreblock"
        android:icon="@drawable/more_block_96dp"
        android:tint="?android:colorControlNormal" />
</menu>
