<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_mng_screen"
        android:orderInCategory="100"
        android:title="@string/design_actionbar_title_manager_view"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_mng_image"
        android:orderInCategory="100"
        android:title="@string/design_actionbar_title_manager_image"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_mng_sound"
        android:orderInCategory="100"
        android:title="@string/design_actionbar_title_manager_sound"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_show_source"
        android:orderInCategory="100"
        android:title="@string/design_actionbar_title_show_source_code"
        app:showAsAction="never" />
</menu>