<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_auto_scroll"
        android:checkable="true"
        android:title="@string/hardcoded_auto_scroll"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_mtrl_filter"
        android:title="@string/hardcoded_filter_by_package_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_mtrl_export"
        android:title="@string/hardcoded_export_logcat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_mtrl_clear_all"
        android:title="@string/hardcoded_clear_all_logs"
        app:showAsAction="always" />



</menu>
