<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_logic_showsource"
        android:icon="@drawable/ic_mtrl_code"
        android:orderInCategory="100"
        android:title="@string/hardcoded_show_source_code"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_logic_undo"
        android:icon="@drawable/ic_mtrl_undo"
        android:orderInCategory="100"
        android:title="@string/hardcoded_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_logic_redo"
        android:icon="@drawable/ic_mtrl_redo"
        android:orderInCategory="100"
        android:title="@string/hardcoded_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_block_helper"
        android:icon="@drawable/ic_mtrl_bookmark"
        android:orderInCategory="100"
        android:title="@string/hardcoded_blocks_collection"
        app:showAsAction="always" />

</menu>
