<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="18dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/hardcoded_style"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="4dp"
        app:checkedChip="@+id/chip_outline"
        app:chipSpacingVertical="-5dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_outlined" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_baseline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_baseline" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_round" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sharp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_sharp" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_twotone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_two_tone" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/hardcoded_selected_color"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

    <Button
        android:id="@+id/select_colour"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hardcoded_ffffff" />
</LinearLayout>