<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="4dp"
        android:hint="@string/hardcoded_enter_a_name"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="10dp"
        app:checkedChip="@+id/chip_folder"
        app:chipSpacingVertical="-5dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_folder"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_class"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_activity"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_file"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_java_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_java_class"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_java_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_java_activity"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_kotlin_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_kotlin_class"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_kotlin_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardcoded_kotlin_activity"
            android:visibility="gone"
            tools:visibility="visible" />

    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
