<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sound_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        android:orderInCategory="1"
        android:title="@string/common_word_edit"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_sound_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="1"
        android:title="@string/common_word_remove"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_sound_add"
        android:icon="@drawable/ic_add_circle_white_24dp"
        android:orderInCategory="1"
        android:title="@string/common_word_add"
        android:visible="false"
        app:showAsAction="always" />
</menu>