<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_boolean"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/logic_variable_type_boolean" />

            <RadioButton
                android:id="@+id/rb_int"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/logic_variable_type_number" />

            <RadioButton
                android:id="@+id/rb_string"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/logic_variable_type_string" />

            <RadioButton
                android:id="@+id/rb_map"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/logic_variable_type_map" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/logic_editor_hint_enter_variable_name"
            android:importantForAutofill="noExcludeDescendants">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>